--- a/src/ui/components/Header/Header.css
+++ b/src/ui/components/Header/Header.css
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
-  padding: 0 12px;
+  padding: 0 8px;
+  justify-content: space-between;
 }
 
 #header .logo {
@@ -18,6 +19,29 @@
   box-sizing: content-box;
 }
 
+#header .header-left {
+  display: flex;
+  flex-direction: row;
+}
+
+#header .img.menu {
+  width: 24px;
+  height: 24px;
+  mask-repeat: no-repeat;
+  mask-size: cover;
+  margin: 4px;
+}
+
+#header .title-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 8px;
+}
+
+#header .subtitle {
+  color: var(--theme-text-color-inactive);
+}
+
 #status {
   padding-left: 10px;
   flex-grow: 1;
@@ -28,6 +52,7 @@
 #header .links {
   display: flex;
   align-items: center;
+  margin-right: 4px;
 }
 
 #header .avatar:not(.authenticated) {
@@ -57,33 +82,17 @@
   margin-left: 16px;
 }
 
-.avatar img {
-  height: 28px;
-  width: 28px;
-  border-radius: 50%;
-  margin-right: 8px;
-}
-
-.avatar .user-name {
-  margin-right: 8px;
-}
-
 #header .title {
-  position: absolute;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
   max-width: 320px;
   color: var(--grey-90);
   font-size: 1.25rem;
-  line-height: 26px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   background: none;
   cursor: text;
+  font-weight: 700;
+  line-height: 18px;
 }
 
 #header .title:not(input):hover {
@@ -106,27 +115,6 @@ button.login {
   background: var(--dark-blue);
   cursor: pointer;
   line-height: 16px;
-}
-
-#header .dropdown-container .content {
-  top: 48px;
-  animation: dropdownFadeIn ease 200ms;
-}
-
-#header .dropdown-wrapper button {
-  border-radius: 4px;
-  padding: 8px 12px;
-  border-radius: 4px;
-  color: white;
-  display: flex;
-  align-items: center;
-  background: var(--dark-blue);
-  cursor: pointer;
-  line-height: 16px;
-}
-
-#header .dropdown-wrapper button .img {
-  background: white;
 }
 
 .loading-bar {
