Revert "bottom timeline"
This reverts commit 10c7585e6eaae7c19b61ee0f60d8e55a83c2f47b.

--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -78,7 +78,7 @@
   display: flex;
   position: absolute;
   border: 1px solid rgb(204, 204, 204);
-  bottom: 64px;
+  top: 100px;
   border-radius: 4px;
   background: #ececec;
   align-items: center;
