--- a/src/styles.css
+++ b/src/styles.css
@@ -94,9 +94,14 @@
 }
 
 .app-mask {
-  position: absolute;
+  /* position: absolute;
+  width: 100%;
+  height: 100%; */
   width: 100%;
   height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 
 .A11y-mouse,
