--- a/src/ui/components/shared/IconWithTooltip.css
+++ b/src/ui/components/shared/IconWithTooltip.css
@@ -30,6 +30,7 @@
   top: var(--icon-margin);
   margin-left: 8px;
   animation: tooltip-pop-up 200ms ease;
+  z-index: var(--z-index-1--icon-tooltip);
 }
 
 @keyframes tooltip-pop-up {
