--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -44,7 +44,7 @@
 .comments-container .comment {
   position: absolute;
   background: white;
-  bottom: 4rem;
+  bottom: 64px;
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
