Add non-dev-devtools (#1101)

--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -1,14 +1,12 @@
-.comments {
-  position: absolute;
-}
-
 .comments-container {
-  position: relative;
-  top: 26px;
+  position: absolute;
   z-index: var(--z-index-1--comment-container);
+  width: 100%;
+  bottom: 4px; /* Arbitrary value to push the markers away from the bottom of the overlay container */
+  height: 18px; /* Corresponds with the height of the comment marker */
 }
 
-.comment-marker {
+.img.comment-marker {
   width: 19px;
   height: 19px;
   position: absolute;
@@ -16,9 +14,9 @@
   outline: none;
 }
 
-.comment-marker:hover,
-.comment-marker.hovered,
-.comment-marker.expanded,
+.img.comment-marker:hover,
+.img.comment-marker.hovered,
+.img.comment-marker.expanded,
 .create-comment:hover {
   margin-top: -1px;
   animation-duration: 200ms;
@@ -26,7 +24,7 @@
   cursor: pointer;
 }
 
-.comment-marker.paused {
+.img.comment-marker.paused {
   z-index: var(--z-index-1--paused-comment);
 }
 
@@ -43,10 +41,10 @@
   background-color: transparent;
 }
 
-.comments .comment {
+.comments-container .comment {
   position: absolute;
   background: white;
-  bottom: 4rem;
+  bottom: 64px;
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
