--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -134,8 +134,7 @@
 .replay-player .commands {
   display: flex;
   flex-direction: row;
-  margin-right: 20px;
-  margin-left: 24px;
+  margin: 11px 20px;
 }
 
 .replay-player .commands *:focus:not(:focus-visible) {
@@ -150,8 +149,12 @@
 }
 
 .replay-player .commands > button .img {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
+}
+
+.replay-player .commands > button:hover .img {
+  background: var(--dark-blue);
 }
 
 .replay-player .btn {
