--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -1,9 +1,14 @@
 .comments-container {
   position: absolute;
   z-index: var(--z-index-1--comment-container);
+  pointer-events: none;
   width: 100%;
-  top: 28px; /* Arbitrary value to push the markers away from the bottom of the overlay container */
+  top: 18px; /* Arbitrary value to push the markers away from the bottom of the overlay container */
   height: 18px; /* Corresponds with the height of the comment marker */
+}
+
+.comments-container > * {
+  pointer-events: auto;
 }
 
 .img.comment-marker {
@@ -44,7 +49,7 @@
 .comments-container .comment {
   position: absolute;
   background: white;
-  bottom: 84px;
+  bottom: 52px;
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
