--- a/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
@@ -31,18 +31,18 @@
   align-items: center;
 }
 
-button.event-listener-expand {
+.event-listeners button.event-listener-expand {
   border: none;
   background: none;
   padding: 4px 5px;
   line-height: 12px;
 }
 
-button.event-listener-expand:hover {
+.event-listeners button.event-listener-expand:hover {
   background: transparent;
 }
 
-button.event-listener-expand .img {
+.event-listeners button.event-listener-expand .img {
   background: var(--theme-icon-dimmed-color);
 }
 
