--- a/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
+++ b/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
 }
 
 .secondary-toolbox-header button {
@@ -31,6 +32,13 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  overflow: hidden;
+}
+
+.secondary-toolbox-header button .label {
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .secondary-toolbox-header button > *:not(:last-child) {
