--- a/src/ui/components/SecondaryToolbox/CommentsPanel.css
+++ b/src/ui/components/SecondaryToolbox/CommentsPanel.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   background: white;
+  height: 100%;
 }
 
 .comments-panel .comment {
@@ -15,7 +16,6 @@
   display: flex;
   flex-direction: row;
   cursor: pointer;
-  border-bottom: 1px solid var(--grey-20);
   width: 100%;
 }
 
@@ -27,12 +27,6 @@
 .comments-panel .comment.selected {
   border-left: 4px solid #5ea3f8;
   padding-left: 12px;
-}
-
-.comment .label {
-  color: var(--theme-comment);
-  overflow-wrap: anywhere;
-  line-height: 1.75em;
 }
 
 .comment .editor {
@@ -118,4 +112,22 @@
   mask-repeat: no-repeat;
   background-color: #969696;
   mask-position: center;
+}
+
+.comments-panel .item-label {
+  font-size: 1.25rem;
+  color: var(--theme-body-color);
+  margin-bottom: 4px;
+}
+
+.comments-panel .item-content {
+  font-size: 1.25rem;
+  color: var(--theme-comment);
+}
+
+.comments-panel .img {
+  margin-right: 8px;
+  margin-top: 2px;
+  width: 24px;
+  height: 24px;
 }
